# dev-tools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build-installer.ps1  index.html  package-lock.json  package.json  push-to-github.sh  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
brand/: README.md  remove-bg.py
docs/: architecture.md  connection-lifecycle.md  navicat-ux.md  planning.md  roadmap.md  原始規劃文件.docx
scripts/: make-favicon.mjs
src/: App.tsx  AssistantPanel.tsx  BackupDialog.tsx  CommandPalette.tsx  ConnectionDialog.tsx  ConnectionProperties.tsx  CreateTableDialog.tsx  CreateViewDialog.tsx  DataDictionary.tsx  DataGenerator.tsx  DataSyncDialog.tsx  DatabaseProperties.tsx  DbTransferDialog.tsx  ErDiagram.tsx  ExportDialog.tsx  ImportDialog.tsx  InfoPanel.tsx  NewKeyDialog.tsx  ProcessListDialog.tsx  PubSubPanel.tsx  QueryBuilder.tsx  RedisConsole.tsx  RedisKeyTree.tsx  RedisOpsPanel.tsx  RedisStatus.tsx  RoutinesDialog.tsx  SchemaCompare.tsx  SearchObjectsDialog.tsx  ServerQueryDialog.tsx  SqlEditor.tsx  TableProperties.tsx  TableView.tsx  TransferDialog.tsx  UserManager.tsx  ViewDesigner.tsx  api.ts  assistant.ts  connColors.test.ts  connColors.ts  datasync.test.ts  (+12 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  backup.rs  error.rs  export.rs  import.rs  it_tests.rs  lib.rs  main.rs  manager.rs  scheduler.rs  ssh.rs  store.rs  transfer.rs
src-tauri/src/cli/: args.rs  dispatch.rs  guard.rs  mod.rs  render.rs  resolve.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  mongo.rs  mysql.rs  postgres.rs  redis.rs  sqlite.rs
src/ui/: Badge.tsx  Button.tsx  EmptyState.tsx  Field.tsx  Icon.tsx  IconButton.tsx  Input.tsx  Modal.tsx  Segmented.tsx  Select.tsx  Spinner.tsx  index.ts
